--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Crystal Clear Window Cleaning — Professional Window Care</title>
   <meta name="description" content="Local, reliable residential and commercial window cleaning — streak-free results, competitive pricing, fully insured." />
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Lora:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="site-header">
     <div class="container header-inner">
-      <h1 class="brand">Crystal Clear Window Cleaning</h1>
+      <a class="brand" href="/">
+        <svg width="36" height="36" viewBox="0 0 48 48" aria-hidden="true" focusable="false"><defs><linearGradient id="g" x1="0" x2="1"><stop offset="0" stop-color="#60a5fa"/><stop offset="1" stop-color="#06b6d4"/></linearGradient></defs><rect x="4" y="4" width="40" height="40" rx="8" fill="url(#g)"/><path d="M12 30 L24 14 L36 30" stroke="#fff" stroke-width="2.5" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg>
+        <span>Crystal Clear</span>
+      </a>
       <nav class="nav">
         <a href="#services">Services</a>
         <a href="#about">About</a>
@@ -23,19 +28,38 @@
     <section class="hero">
       <div class="container hero-inner">
         <div class="hero-copy">
-          <h2>Shine Brighter — Streak-Free Windows, Every Time</h2>
-          <p>Residential and commercial window cleaning, screen & gutter cleaning, and pressure washing. Licensed, insured, and satisfaction guaranteed.</p>
-          <a href="#contact" class="btn">Get a Free Quote</a>
+          <h2 class="hero-title">Shine Brighter — Streak-Free Windows, Every Time</h2>
+          <p class="hero-lead">Premium residential and commercial window cleaning with eco-friendly products and insured technicians — sparkling results backed by a satisfaction guarantee.</p>
+          <div class="hero-ctas">
+            <a href="#contact" class="btn btn-primary">Get a Free Quote</a>
+            <a href="#services" class="btn btn-ghost">Our Services</a>
+          </div>
+
+          <div class="trust">
+            <span class="muted">Trusted by</span>
+            <div class="logos" aria-hidden="true">
+              <div class="logo">HomeCo</div>
+              <div class="logo">Westside</div>
+              <div class="logo">BrightCorp</div>
+            </div>
+          </div>
         </div>
         <div class="hero-visual" aria-hidden="true">
-          <!-- Simple decorative window illustration -->
-          <svg viewBox="0 0 200 200" class="window-illustration" xmlns="http://www.w3.org/2000/svg">
-            <rect x="10" y="10" width="180" height="180" rx="8" fill="#eaf6ff" stroke="#8fd4ff" stroke-width="4" />
-            <line x1="100" y1="10" x2="100" y2="190" stroke="#8fd4ff" stroke-width="4" />
-            <line x1="10" y1="100" x2="190" y2="100" stroke="#8fd4ff" stroke-width="4" />
-            <circle cx="56" cy="56" r="4" fill="#fff" opacity="0.9" />
-            <circle cx="74" cy="36" r="3" fill="#fff" opacity="0.85" />
-            <circle cx="140" cy="70" r="3" fill="#fff" opacity="0.75" />
+          <!-- Premium decorative illustration -->
+          <svg viewBox="0 0 320 240" class="window-illustration" xmlns="http://www.w3.org/2000/svg">
+            <defs>
+              <linearGradient id="lg2" x1="0" x2="1">
+                <stop offset="0" stop-color="#e6f6ff" />
+                <stop offset="1" stop-color="#d9fbff" />
+              </linearGradient>
+            </defs>
+            <rect x="12" y="20" width="296" height="200" rx="16" fill="url(#lg2)" stroke="#c6f0ff" stroke-width="3" />
+            <g transform="translate(36,48)">
+              <rect width="200" height="110" rx="8" fill="#fff" opacity="0.95"/>
+              <path d="M0 98 C50 60 150 60 200 98" stroke="#9fd6ff" stroke-width="6" fill="none" stroke-linecap="round"/>
+              <circle cx="40" cy="28" r="6" fill="#fefefe" opacity="0.95" />
+              <circle cx="68" cy="12" r="4" fill="#fefefe" opacity="0.9" />
+            </g>
           </svg>
         </div>
       </div>
@@ -44,21 +68,25 @@
     <section id="services" class="container services">
       <h3>Our Services</h3>
       <div class="grid">
-        <article class="card">
+        <article class="card feature">
+          <div class="icon" aria-hidden="true">🔍</div>
           <h4>Residential Window Cleaning</h4>
-          <p>Interior & exterior window cleaning with attention to detail — sills, tracks, and frames included.</p>
+          <p>Interior & exterior cleaning with attention to sills, frames & hard-to-reach windows — spotless results.</p>
         </article>
-        <article class="card">
+        <article class="card feature">
+          <div class="icon" aria-hidden="true">🏢</div>
           <h4>Commercial Window Cleaning</h4>
-          <p>Reliable service for shops, offices, and multi-story buildings. Safety-first approach and professional equipment.</p>
+          <p>Reliable service for offices and storefronts — professional teams trained in safe high-access cleaning.</p>
         </article>
-        <article class="card">
+        <article class="card feature">
+          <div class="icon" aria-hidden="true">🧰</div>
           <h4>Screen & Gutter Cleaning</h4>
-          <p>Improve airflow and protect your home with clean screens and clear gutters.</p>
+          <p>Keep your home safe and efficient with clean gutters and fresh screens.</p>
         </article>
-        <article class="card">
+        <article class="card feature">
+          <div class="icon" aria-hidden="true">💦</div>
           <h4>Pressure Washing</h4>
-          <p>Driveways, decks and siding — brighten surfaces and remove mold, mildew and grime.</p>
+          <p>Restore patios, decks and siding with safe, effective pressure washing that removes stubborn grime.</p>
         </article>
       </div>
     </section>
@@ -70,9 +98,20 @@
 
     <section id="testimonials" class="container test">
       <h3>What our customers say</h3>
-      <blockquote>
-        "Fast, friendly and my windows haven't looked this good since they were installed — highly recommend!" — Sarah L.
-      </blockquote>
+      <div class="test-grid">
+        <blockquote class="test-card">
+          <p>“Fast, friendly and my windows haven't looked this good since they were installed — highly recommend!”</p>
+          <cite>— Sarah L.</cite>
+        </blockquote>
+        <blockquote class="test-card">
+          <p>“Arrived on time, professional and thorough. My storefront looks brand new.”</p>
+          <cite>— Mark R.</cite>
+        </blockquote>
+        <blockquote class="test-card">
+          <p>“Excellent attention to detail and great value. Will hire again.”</p>
+          <cite>— Priya S.</cite>
+        </blockquote>
+      </div>
     </section>
 
     <section id="contact" class="container contact">
@@ -115,7 +154,7 @@
         </div>
 
         <div class="form-actions">
-          <button class="btn" type="submit">Send Message</button>
+          <button class="btn btn-primary" type="submit">Send Message</button>
           <div id="form-status" role="status" aria-live="polite"></div>
         </div>
       </form>
